<resources>
    <string name="app_name">Food Buddy</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">SIGN IN</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have Food Buddy account? <b>Sign up now!</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot your password?\nNo worries, we got you!</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_confirm_password">Confirm Password</string>

    <!-- Role Selection Page -->
    <string name="button_admin">Administrator</string>
    <string name="button_customer">Customer</string>
    <string name="button_seller">Seller</string>
    <string name="selection_text">Please Select Your Role</string>
    <!-- End of Role Selection Page Resources -->

    <!--User Profile String Resources-->
    <string name="user_profile">User Profile</string>
    <string name="order_history">Order History</string>
    <string name="editButton">Edit</string>

    <!--Order History String Resources -->
    <string name="next_page">Next</string>
    <string name="prev_page">Prev</string>


</resources>
